on-premise/tailscale-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-subnet-router
  labels:
    app: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      serviceAccountName: tailscale # 핵심! 위에서 만든 신분증을 목에 걸어줌
      containers:
      - name: tailscale
        image: tailscale/tailscale:latest
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "NET_RAW"]
