on-premise/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node-2 # 핵심! 워커 노드 2번에만 뜨도록 강제 지정
      containers:
      - name: mysql
        image: mysql:8.0 # 안정적인 MySQL 8.0 버전
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql # 컨테이너 내부의 DB 저장 경로
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pvc # 아까 만든 PVC(NFS)와 연결
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mysql
